<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ozcaan11.android_mini_projeler.HesapMakinesiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tv_num1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tv_num2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnArti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnArti" />

        <Button
            android:id="@+id/btnEksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEksi" />

        <Button
            android:id="@+id/btnCarp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCarp" />

        <Button
            android:id="@+id/btnBol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBol" />
    </LinearLayout>

</LinearLayout>
